--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             document.body.appendChild(s);
         }
     </script>
+  <script src="js/analytics_ubg_v1_4.js"></script>
 </body>
 
 </html>
